--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basic-template",
-  "version": "1.1",
+  "version": "1.2",
   "description": "Eleventy basic template with layout, 404 page & GitHub",
   "main": "eleventy.config.js",
   "scripts": {
@@ -8,10 +8,13 @@
     "build": "eleventy",
     "debug": "DEBUG=Eleventy* eleventy"
   },
-  "keywords": ["Eleventy", "LiquidJS", "Pico CSS"],
+  "keywords": ["Eleventy", "LiquidJS", "UIkit"],
   "author": "Michel Maillard",
-  "license": "ISC",
-  "dependencies": {
+  "license": "MIT",
+  "devDependencies": {
     "@11ty/eleventy": "^2.0.1"
+  },
+  "dependencies": {
+    "uikit": "^3.16.26"
   }
 }
